--- a/WeatherRequest/Views/Home/Response.cshtml
+++ b/WeatherRequest/Views/Home/Response.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         .custom-container {
-            height: 100vh;
+            height: 96.9vh;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -21,19 +21,23 @@
             background-color: rgba(10,23,55,0.3);
             padding: 20px;
             border-radius: 10px;
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <div class="custom-container">
         <div class="custom-form">
-            <h4 class="">Weather Result</h4>
-            <p>Country: @Model.Country</p>
-            <p>CityName: @Model.CityName</p>
-            <p>Main: @Model.Main</p>
-            <p>Description: @Model.Description</p>
-            <p>Temp: @Model.Temp</p>
-            <p>FeelsLike: @Model.FeelsLike</p>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
+            </svg>
+            <br>
+            <h4 class="">@Model.Country | @Model.CityName | @Model.Temp ºC</h4>
+            
+            <p>Descrição: @Model.Description</p>
+            <p>Sensação Térmica: @Model.FeelsLike ºC</p>
+            <p>Humidade: @Model.Humidity %</p>
+            
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
